# langchain

./: pyproject.toml  requirements.txt
CH-1/: 1-Basics.ipynb  2-Messages.ipynb  3-structuredOutput.ipynb
CH-2/: 1-chains.ipynb  2-chain_with_curstom_runable.ipynb  3-parallel_chains.ipynb  4-conditional_chains.ipynb  chain_with_curstom_runable.ipynb
CH-3/: 1-React-Agent.ipynb  2-ReAct_DB_Agent.ipynb  demo.py  init_db.py
CH-3/Sales_DB/: sales.db
